--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SignUpSignIn"
         tools:targetApi="31">
+
         <activity
             android:name=".SignUpActivity"
-            android:exported="true" >
+            android:exported="false">
+
+        </activity>
+        <activity
+            android:name=".SignInActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,15 +27,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SignInActivity"
-            android:exported="true" >
-
-        </activity>
-        <activity
             android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="false"/>
     </application>
 
 </manifest>
